fix resume spacing issue

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ li {
 .resume_left {
 	width: 210;
 	margin-right: 10;
-  	height: 590px;
+  	height: 600px;
   	float: left;
 }
 
